# pypgoutput

./: .gitignore  .gitlab-ci.yml  Makefile  pyproject.toml  setup.py
src/pypgoutput/: decoders.py  reader.py
tests/: run_tests_locally.sh
