[tool.poetry]
name = "pypgoutput"
version = "0.1.0"
description = "Python package to read, parse and convert PostgreSQL logical decoding messages to change data capture messages"
authors = ["Igor Nemilentsev <trezorg@gmail.com>"]
maintainers = ["Igor Nemilentsev <trezorg@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["README.md"]
exclude = ["tests"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
mypy = "^0.942"
flake8 = "^4.0.1"
pylint = "^2.13.5"
pytest-cov = "^3.0.0"
black = "^22.3.0"
autopep8 = "^1.6.0"
isort = "^5.10.1"
pyproject-flake8 = "^0.0.1-alpha.4"

[tool.isort]
line_length = "79"
multi_line_output = "3"
use_parentheses = "True"
include_trailing_comma = "True"
force_grid_wrap = "2"
skip = [".gitignore", ".dockerignore"]

[tool.black]
line-length = "120"
verbose = "true"

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "def __repr__"
]

[tool.coverage.run]
branch = false
omit=[
  "tests/*"
]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
plugins = "pydantic.mypy"
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
#disallow_untyped_calls = true
follow_imports = "silent"
ignore_missing_imports = true

[tool.pylint.master]

load-plugins = [
    "pylint.extensions.code_style",
    "pylint.extensions.typing"
]

ignore = [
    ".coverage",
    ".git",
    ".pytest_cache",
    ".env",
    ".mypy_cache",
    ".idea",
    ".vscode",
    ".devspace",
    "Dockerfile",
    ".dockerignore",
    ".gitignore",
    ".gitlab-ci.yml",
    "auth.toml",
    "tests",
    "poetry.lock",
    "pyproject.toml",
    "README.md",
    "Makefile",
    "setup.py",
]

ignore-patterns = [
    "poetry.lock",
    "docker.*",
]

[tool.pylint.miscellaneous]
notes = "FIXME,XXX"

[tool.pylint.message_control]

max-line-length = "120"

disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "no-self-use",
    "no-self-argument",
    "too-few-public-methods",
    "unused-argument",
    "invalid-name",
]

[tool.pylint.design]
max-parents = "15"
max-locals = "20"

[tool.pylint.similarities]
ignore-comments = "yes"
ignore-docstrings = "yes"
ignore-imports = "yes"
min-similarity-lines = "10"

[tool.flake8]

exclude = [
    ".git",
    "__pycache__",
    "migrations",
    "settings*.py",
    "venv",
    "contrib",
    "tests",
    "*.env",
    "setup.py",
]

max-complexity = "10"
max-line-length = "120"